--- a/DP/css/global.css
+++ b/DP/css/global.css
@@ -9,7 +9,7 @@
 em { font-style: italic; }
 
 body {
-	background: #111 url("https://cdn.quells.net/DP/img/bglighter.jpg") no-repeat;
+	background: #111 url("http://assets.quells.net/DP/img/bglighter.jpg") no-repeat;
 	background-attachment: scroll;
 	font-family: "Helvetica Neue", Helvetica, Arial, Symbol, sans-serif;
 	font-size: 16px;
