--- a/DP/proj/lightbulbs/style.css
+++ b/DP/proj/lightbulbs/style.css
@@ -42,7 +42,7 @@ body {
 div#wrap { width: 600px; margin: 0 auto; /* center div trick */ }
 
 h1#lightbulbs { width: 600px; height: 150px; position: relative;
-				/* background: url("images/header.png") no-repeat; color: transparent; */ }
+				/* background: url("http://assets.quells.net/DP/proj/lightbulbs/images/header.png") no-repeat; color: transparent; */ }
 
 div#nav { position: relative; width: 600px; height: 75px; }
 	ul.menu { position: relative; list-style: none; text-align: left; }
@@ -56,10 +56,10 @@ div#nav { position: relative; width: 600px; height: 75px; }
 table.menu { position: relative; }
 	table.menu tr td { width: 150px; height: 75px; }
 		table.menu tr td a { width: 150px; height: 75px; font-size: 2.0em; color: transparent; }
-			table.menu tr td.incan { background: url("images/incan-icon.png"); }
-			table.menu tr td.cfl { background: url("images/cfl-icon.png"); }
-			table.menu tr td.led { background: url("images/led-icon.png"); }
-			table.menu tr td.halo { background: url("images/halo-icon.png"); }
+			table.menu tr td.incan { background: url("http://assets.quells.net/DP/proj/lightbulbs/images/incan-icon.png"); }
+			table.menu tr td.cfl { background: url("http://assets.quells.net/DP/proj/lightbulbs/images/cfl-icon.png"); }
+			table.menu tr td.led { background: url("http://assets.quells.net/DP/proj/lightbulbs/images/led-icon.png"); }
+			table.menu tr td.halo { background: url("http://assets.quells.net/DP/proj/lightbulbs/images/halo-icon.png"); }
 
 div.text { width: 570px; padding: 15px 15px 0; background: white; }
 
@@ -69,4 +69,4 @@ div.text span { text-align: center; font-size: 12px; }
 
 .floatright { float: right; }
 
-.bottom { width: 600px; height: 30px; background: url("images/bottom.png"); }
+.bottom { width: 600px; height: 30px; background: url("http://assets.quells.net/DP/proj/lightbulbs/images/bottom.png"); }
